oxiplate-derive/tests/broken/writ/closed-like-statement.stderr
error: Expected `}}`, `-}}`, or `_}}`
 --> tests/broken/writ/closed-like-statement.rs:4:27
  |
4 | #[oxiplate_inline("{{ foo %}")]
  |                           ^^
